# pybo

./: .flake8  .gitignore  .isort.cfg  README.md  pyproject.toml
common/: urls.py  views.py
common/forms/: user_create_form.py
config/: settings.py  urls.py
pybo/: admin.py  models.py  urls.py  views.py
pybo/forms/: answer.py  question.py
pybo/templates/: base.html
pybo/templates/question/: question_detail.html  question_form.html  question_list.html
pybo/templatetags/: pybo_filter.py
